prusti-tests/tests/verify_overflow/ui/counterexamples/account.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/account.rs:18:31
   |
18 | fn has_money(acc: Account) -> bool {
   |                               ^^^^
   |
note: the error originates here
  --> $DIR/account.rs:18:1
   |
18 | / fn has_money(acc: Account) -> bool {
19 | |     get_balance(acc) > 0
20 | | }
   | |_^
note: counterexample for "acc"
       value:   Account {
            balance: 0,
        }
  --> $DIR/account.rs:18:14
   |
18 | fn has_money(acc: Account) -> bool {
   |              ^^^
note: counterexample for "result"
       value:   false
  --> $DIR/account.rs:19:5
   |
19 |     get_balance(acc) > 0
   |     ^^^^^^^^^^^^^^^^^^^^
note: counterexample for "get_balance()"
       value:   0
  --> $DIR/account.rs:19:5
   |
19 |     get_balance(acc) > 0
   |     ^^^^^^^^^^^^^^^^

error: aborting due to previous error

